--- a/carousel.html
+++ b/carousel.html
@@ -9,12 +9,19 @@
 
 
     <link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css">
+    <link rel="icon" href="Images/Aviation.png">
 
 
 
     <style>
         body{
-            font-family: Arial, SansSerif;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-image: url("Images/Blue Sky with Clouds and Sun - Poster.jpg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            min-height: 100vh;
         }
         .intro-section{
             background: linear-gradient(135deg, #0d6efd, #6610f2);
@@ -56,6 +63,11 @@
 
         .carousel-caption .btn {
             transition: transform 0.3s ease;
+        }
+        .carousel-caption {
+            background-color: rgba(0,0,0,0.5); /* semi-transparent background */
+            border-radius: 10px;
+            padding: 20px;
         }
 
            </style>
